2009-08-29   Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl, test/sectionning/nodename_parentheses: 
	ignore nodes having a name alike references to
	external nodes in menu, line (manual)node.
	* texi2html.pl, formats/info.init: warn for non empty format without 
	@item. https://savannah.gnu.org/bugs/?15513

2009-08-25   Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: fix the number of entry per index page in case of 
	index split.
	* tests/encodings: added example chinese_mixed_with_en from 
	https://savannah.gnu.org/bugs/?22696.

2009-08-24   Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl, texi2html.init, mediawiki.init: remove the user 
	from footer, and the corresponding USER variable and 
	$Texi2HTML::THISDOC{user}. This is a useless information leaking.

2009-08-23   Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl, formats/docbook.init: consider @top more as a 
	normal element when doing the sectionning elements tree.
	* texi2html.pl: if NODE_FILENAMES is true, set docu_doc to 
	the top node file name. Keep filename if NODE_FILENAMES is 
	set even for documents with no @element_list.
	* texi2html.pl, texi2html.init, formats/html.init: 
	Change print_redirection_page API such that it is possible to 
	return null to avoid printing anything, and even avoid opening
	the file.
	Don't do redirection files in the default case.
	* texi2html.pl, formats/xml.init: remove spaces in front of nodes
	and titles in menus.
	* formats/xml.init: node elements are stand-alone.
	Sectionning elements follow the tree organization of the 
	document.
	* test/*: use newer latex2html in debian (2008 version).

2009-08-07   Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: do the contents on the sections.
	Use exclusively sections to find fastback, fastforward and 
	element_chapter_index.
	* texi2html.pl, texi2html.init, examples/* formats/*: 
	add NODE_NAME_IN_INDEX.
	Always call the heading formatting even if not an element.